Fix a problem with a project running in Module mode printing an unexpected error message that shouldn't be there. Do a better job of handling that.
Add a comment to the vistImports to explain the logic of the processing.
More code deletion:
- remove unneeded ParserPackage class
- Remove unused command line options
Run tools/format.sh to format everything consistently.
Remove the JavaParser dependency entirely
Update the BUILD.want.gen files by running the build generator and removing the "java.lang.*" imports from the expected lists.